make different docker compose file for dev and prod

--- a/.dockerignore
+++ b/.dockerignore
@@ -6,5 +6,8 @@
 Dockerfile
 README.md
 
+# ignore all docker compose file
+docker-compose*
+
 # ignoring node_modules because container will eventually install them
 node_modules
