--- a/docker-compose-dev.yaml
+++ b/docker-compose-dev.yaml
@@ -11,6 +11,14 @@ services:
       - .:/app:ro
       - /app/node_modules
     environment:
+      # set env var for node
       - NODE_ENV=development
+      - MONGO_USER=arkan
+      - MONGO_PASS=arkan
     command: npm run dev
+  mongo:
+    environment:
+      # set mongodb certificate from .env
+      MONGO_INITDB_ROOT_USERNAME: ${MONGO_USER}
+      MONGO_INITDB_ROOT_PASSWORD: ${MONGO_PASS}
 # docker compose -f docker-compose.yaml -f docker-compose-dev.yaml up -d
