--- a/docker-compose-dev.yaml
+++ b/docker-compose-dev.yaml
@@ -15,6 +15,7 @@ services:
       - NODE_ENV=development
       - MONGO_USER=arkan
       - MONGO_PASS=arkan
+      - SESSION_SECRET=anjingberkuda
     command: npm run dev
   mongo:
     environment:
