--- a/package.json
+++ b/package.json
@@ -25,8 +25,11 @@
   "homepage": "https://github.com/arkandamar/Docker-Nodejs#readme",
   "dependencies": {
     "bcrypt": "^5.1.0",
+    "connect-redis": "^7.1.0",
     "express": "^4.18.2",
-    "mongoose": "^7.4.1"
+    "express-session": "^1.17.3",
+    "mongoose": "^7.4.1",
+    "redis": "^4.6.7"
   },
   "devDependencies": {
     "nodemon": "^3.0.1"
