--- a/docker-compose-dev.yaml
+++ b/docker-compose-dev.yaml
@@ -1,6 +1,9 @@
 version: "3.8"
 
 services:
+  nginx:
+    ports:
+      - "3000:80"
   node-app:
     # override build and pass the node_env args for development
     build:
