--- a/docker-compose-prod.yaml
+++ b/docker-compose-prod.yaml
@@ -1,6 +1,9 @@
 version: "3.8"
 
 services:
+  nginx:
+    ports:
+      - "80:80"
   node-app:
     # override build and pass the node_env args for prod
     build:
