--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -1,20 +1,25 @@
 version: "3.8"
 
 services:
+  nginx:
+    image: nginx:stable-alpine
+    ports:
+      - "3000:80"
+    volumes:
+      - ./nginx/default.conf:/etc/nginx/conf.d/default.conf:ro
   node-app:
     build: .
-    ports:
-      - ${PORT}:${PORT}
     environment:
-      - PORT=${PORT}
+      - PORT=3000
     depends_on:
       - mongo # this will make sure that mongo started first before node
       - redis
+      - nginx
     deploy:
       resources:
         limits:
-          cpus: "0.5"
-          memory: 500M
+          cpus: "0.25"
+          memory: 250M
   mongo:
     image: mongo:latest
     volumes:
